Wrap preformatted content to avoid overflow.

--- a/_sass/jekyll-theme-kernel.scss
+++ b/_sass/jekyll-theme-kernel.scss
@@ -151,6 +151,7 @@ main p {
 
 main pre {
   overflow: auto;
+  white-space: pre-wrap;
 
   margin: 0 0 20px 20px;
   padding: 20px;
